[project]
name = "vikram"
version = "0.2.0"
description = "Defeating BETAAL's trickery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ifaddr>=0.2.0",
    "plyer>=2.1.0",
    "dbus-python>=1.3.2 ; sys_platform == 'linux'",
    "pyobjus>=1.2.3 ; sys_platform == 'darwin'",
    "requests>=2.32.3",
]
